--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <title>Docker Nginx</title>
 </head>
 <body>
-  <h2>Hello from Nginx container</h2>
-</body>
+  <h2>
+    <div align="center">
+      <font color="green">
+        Hello from Nginx on Alpine container
+        </font>
+      </div>
+    </h2>
+  </body>
 </html>
